src/objects/APTS_Product_Replacement_Codes__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Base_UoM__c</fullName>
        <label>Base UoM</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Brand__c</fullName>
        <label>Brand</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category__c</fullName>
        <label>Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cross_plant_material_status__c</fullName>
        <label>Cross-plant material status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product_Replacement_Codes (Product)</relationshipLabel>
        <relationshipName>Product_Replacement_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Replacement_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Replacement External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Replacement_Product_Code__c</fullName>
        <label>Replacement Product Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_From__c</fullName>
        <label>Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_To__c</fullName>
        <label>Valid To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Variety__c</fullName>
        <label>Variety</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Weight_UoM__c</fullName>
        <label>UoM</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_status__c</fullName>
        <label>Distribution-chain-specific material st</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_01</fullName>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>SAP_02</fullName>
                    <label>Blocked for selling</label>
                </value>
                <value>
                    <fullName>SAP_03</fullName>
                    <label>Warning when selling</label>
                </value>
                <value>
                    <fullName>SAP_04</fullName>
                    <label>New product</label>
                </value>
                <value>
                    <fullName>SAP_05</fullName>
                    <label>OOS prolonged</label>
                </value>
                <value>
                    <fullName>SAP_06</fullName>
                    <label>Only some customers</label>
                </value>
                <value>
                    <fullName>SAP_07</fullName>
                    <label>To sell old stocks</label>
                </value>
                <value>
                    <fullName>SAP_08</fullName>
                    <label>Product for deletion</label>
                </value>
                <value>
                    <fullName>SAP_09</fullName>
                    <label>Generic</label>
                </value>
                <value>
                    <fullName>SAP_10</fullName>
                    <label>Obsolete to consult</label>
                </value>
                <value>
                    <fullName>SAP_11</fullName>
                    <label>Only for catalog</label>
                </value>
                <value>
                    <fullName>SAP_12</fullName>
                    <label>End of service</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                    <isActive>false</isActive>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>Blocked for purchasing</fullName>
                    <isActive>false</isActive>
                    <label>Blocked for purchasing</label>
                </value>
                <value>
                    <fullName>Development</fullName>
                    <isActive>false</isActive>
                    <label>Development</label>
                </value>
                <value>
                    <fullName>Historic</fullName>
                    <isActive>false</isActive>
                    <label>Historic</label>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                    <isActive>false</isActive>
                    <label>Obsolete</label>
                </value>
                <value>
                    <fullName>Productive</fullName>
                    <isActive>false</isActive>
                    <label>Productive</label>
                </value>
                <value>
                    <fullName>Ready for planning</fullName>
                    <isActive>false</isActive>
                    <label>Ready for planning</label>
                </value>
                <value>
                    <fullName>Released</fullName>
                    <isActive>false</isActive>
                    <label>Released</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Replacement Code</label>
    <listViews>
        <fullName>All_Product_Replacement_Codes</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Replacement Codes</label>
    </listViews>
    <nameField>
        <label>Product Replacement Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_Replacement_Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>